Fix layout issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,9 +4,11 @@
 }
 
 .container {
-  min-height: 100vh;
+  height: 100vh;
+  width: 100vw;
   background-color: orangered;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-items: stretch;
+  align-items: stretch;
 }
