--- a/src/components/Questionare/AnswerButton/AnswerButton.scss
+++ b/src/components/Questionare/AnswerButton/AnswerButton.scss
@@ -1,8 +1,6 @@
 
 .btn {
-  width: 98%;
-  height: 100%;  
-  margin: 1rem;
+  height: 100%;
   border-radius: 16px;
   background-color: orange;
   border-color: rgb(177, 117, 5);
