--- a/src/components/Questionare/Questionare.scss
+++ b/src/components/Questionare/Questionare.scss
@@ -1,10 +1,13 @@
 .grid {
-  width: 100%;
   height: 100%;
 
+}
+
+.answers {
+  height: 100%;
   display: flex;
   flex-direction: column;
 
-  align-items: center;
-  justify-content: space-between;
+  align-items: stretch;
+  justify-content: space-evenly;
 }
